# build-release-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  dockerfile
cmake/: build_system.cmake
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cc
